# ViTinference

./: .gitignore  CMakeLists.txt  README.md  basicInfo.txt  image.npy  inference  inference.cpp  run.sh  temp.txt
kernel/: addBias.cpp  chunk.cpp  concat.cpp  exp.cpp  layerNorm.cpp  linear.cpp  matadd.cpp  matdiv.cpp  matmul.cpp  matpow.cpp  mean.cpp  rearrange.cpp  repeat.cpp  slice.cpp  softmax.cpp  tanh.cpp  transpose.cpp  variance.cpp  view.cpp
layer/: attention.cpp  feedForward.cpp  gelu.cpp  layerNorm.cpp  linear.cpp  mlp.cpp  module.h  transformer.cpp  vit.cpp  vit.h
utils/: readNpyData.cpp  tensor.hpp  utils.cpp
weights/: cls_token  mlp_head.0.bias  mlp_head.0.weight  mlp_head.1.bias  mlp_head.1.weight  pos_embedding  to_patch_embedding.1.bias  transformer.layers.0.0.fn.to_out.0.bias  transformer.layers.0.0.norm.bias  transformer.layers.0.0.norm.weight  transformer.layers.0.1.fn.net.0.bias  transformer.layers.0.1.fn.net.3.bias  transformer.layers.0.1.norm.bias  transformer.layers.0.1.norm.weight  transformer.layers.1.0.fn.to_out.0.bias  transformer.layers.1.0.norm.bias  transformer.layers.1.0.norm.weight  transformer.layers.1.1.fn.net.0.bias  transformer.layers.1.1.fn.net.3.bias  transformer.layers.1.1.norm.bias  transformer.layers.1.1.norm.weight  transformer.layers.2.0.fn.to_out.0.bias  transformer.layers.2.0.norm.bias  transformer.layers.2.0.norm.weight  transformer.layers.2.1.fn.net.0.bias  transformer.layers.2.1.fn.net.3.bias  transformer.layers.2.1.norm.bias  transformer.layers.2.1.norm.weight  transformer.layers.3.0.fn.to_out.0.bias  (+20 more)
(+23 files in other folders)
