PROJECT(ViT_Inference)

cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_FLAGS "${CAMKE_CXX_FLAGS} -std=c++11 ")

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES({OpenCV_INCLUDE_DIRS})

AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_EXECUTABLE(ViT_Inference ${SRC_LIST})

TARGET_LINK_LIBRARIES(ViT_Inference ${OpenCV_LIBS})
